[package]
name = "geyser-grpc-connector"
version = "2.0.0"
edition = "2021"

description = "Multiplexing and Reconnection on Yellowstone gRPC Geyser client streaming"
license = "Apache-2.0"
authors = ["GroovieGermanikus <groovie@mango.markets>"]
repository = "https://github.com/blockworks-foundation/geyser-grpc-connector"

[dependencies]
yellowstone-grpc-client = { version = "2.0.0", git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v2.0.0+solana.2.0.16" }
yellowstone-grpc-proto = { version = "2.0.0", git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v2.0.0+solana.2.0.16" }

# required for CommitmentConfig
solana-sdk = "2.0.16"

url = "2.5.0"
async-stream = "0.3.5"
tokio = { version = "1.28" , features = ["rt", "rt-multi-thread"] }
futures = "0.3.28"
merge-streams = "0.1.2"
anyhow = "1.0.70"
log = "0.4.17"
tracing = "0.1.37"
itertools = "0.10.5"
derive_more = "0.99.17"

base64 = "0.21.5"
bincode = "1.3.3"

csv = "1.3.0"

dashmap = "5.5.3"

tonic = { version= "0.12.3", features=["gzip"] }
tonic-health = "0.12.3"
regex = "1.10.4"
clap = { version = "4.2", features = ["derive"] }

lz4_flex = "0.11.3"

[dev-dependencies]
tracing-subscriber = "0.3.16"
solana-logger = "2.0.16"
solana-account-decoder = "2.0.16"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
