[package]
name = "geyser-grpc-connector"
version = "0.13.0+yellowstone.5.0.0-solana.2.1"
edition = "2021"

description = "Multiplexing and Reconnection on Yellowstone gRPC Geyser client streaming"
license = "Apache-2.0"
authors = ["GroovieGermanikus <groovie@mango.markets>"]
repository = "https://github.com/blockworks-foundation/geyser-grpc-connector"

[dependencies]
# note: as timewriting there are versions 3.0.0 and 4.0.0; we will come back to that later
yellowstone-grpc-client = { version = "5.0.0", git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v5.0.1+solana.2.1.11" }
yellowstone-grpc-proto = { version = "5.0.0", git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v5.0.1+solana.2.1.11" }

# required for CommitmentConfig
solana-sdk = "~2.1.11"

url = "2.5.0"
async-stream = "0.3.5"
tokio = { version = "1.28" , features = ["rt-multi-thread"] }
tokio-metrics = { version = "0.4.0", default-features = false }
futures = "0.3.28"
merge-streams = "0.1.2"
anyhow = "1.0.70"
log = "0.4.17"
tracing = "0.1.37"
itertools = "0.10.5"

tonic = "0.12"
tonic-health = "0.12"


[dev-dependencies]
tracing-subscriber = "0.3.16"
solana-logger = "2"
solana-account-decoder = "~2.1.11"

base64 = "0.21.5"
bincode = "1.3.3"
csv = "1.3.0"
lz4_flex = "0.11.3"
dashmap = "6.1.0"
regex = "1.10.4"
clap = { version = "4.2", features = ["derive"] }

# workaround to avoid solana dependency issue https://github.com/solana-labs/solana/blob/27eff8408b7223bb3c4ab70523f8a8dca3ca6645/Cargo.toml#L514
[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
