[package]
name = "geyser-grpc-connector"
version = "0.13.2+yellowstone.8.0.0-solana.2.3.1"
edition = "2021"

description = "Multiplexing and Reconnection on Yellowstone gRPC Geyser client streaming"
license = "Apache-2.0"
authors = ["GroovieGermanikus <groovie@mango.markets>"]
repository = "https://github.com/blockworks-foundation/geyser-grpc-connector"

[dependencies]
yellowstone-grpc-client = { version = "8.0.0", git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v8.0.0+solana.2.3.1" }
yellowstone-grpc-proto = { version = "8.0.0", git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v8.0.0+solana.2.3.1" }

# required for CommitmentConfig
solana-sdk = "=2.3.1"

url = "2.5.4"
async-stream = "0.3.6"
tokio = { version = "1.46.0", features = ["rt-multi-thread"] }
tokio-metrics = { version = "0.4.0", default-features = false }
futures = "0.3.28"
merge-streams = "0.1.2"
anyhow = "1.0.70"
log = "0.4.27"
tracing = "0.1.41"
itertools = "0.14.0"

tonic = "0.12"
tonic-health = "0.12"

[dev-dependencies]
tracing-subscriber = "0.3.16"
solana-logger = "2"
solana-account-decoder = "~2.3.1"

base64 = "0.22.1"
bincode = "2.0.1"
csv = "1.3.0"
lz4_flex = "0.11.5"
dashmap = "6.1.0"
regex = "1.11.1"
clap = { version = "4.5.40", features = ["derive"] }

# patch curve25519-dalek is gone
